ctm-sf-homeloan-app/main/default/objects/PropertyReport__c/PropertyReport__c.object-meta.xml
<CustomObject>
    <label>Property Report</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Property Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>