ctm-sf-homeloan-app/main/default/objects/PropertyReport__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Reports</relationshipLabel>
    <relationshipName>Property_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>