ctm-sf-homeloan-app/main/default/objects/PropertyReport__c/fields/AddressSuburb__c.field-meta.xml
<CustomField>
    <fullName>AddressSuburb__c</fullName>
    <formula>RIGHT(Address__c, LEN(Address__c) - (FIND(&apos;report for &apos;, Address__c)+10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address/Suburb</label>
    <type>Text</type>
</CustomField>