ctm-sf-homeloan-app/main/default/objects/PropertyReport__c/fields/PropertyRelationship__c.field-meta.xml
<CustomField>
    <fullName>PropertyRelationship__c</fullName>
    <label>Property Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PropertyReportRelationships</valueSetName>
    </valueSet>
</CustomField>