ctm-sf-homeloan-app/main/default/objects/PropertyReport__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>If( BEGINS(Address__c, &apos;Suburb&apos;), &apos;Suburb&apos;, &apos;Property&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>